Fix z-index issue

--- a/src/components/rey-portal/styles.css
+++ b/src/components/rey-portal/styles.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
   top: 0;
   left: 0;
   height: 100%;
